[package]
name = "askbox"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.9"
anyhow = "1.0.44"
chrono = { version = "0.4" }
log = "0.4.14"
parking_lot = "0.11.2"
pretty_env_logger = "0.4.0"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "chrono", "migrate", "runtime-tokio-rustls" ] }
thiserror = "1.0.29"
tokio = "1.12.0"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
